<resources>

    <string name="app_name">Task Forest</string>


    <string name="log_out">Log out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <plurals name="go_to_sub_task_s">
        <item quantity="one">
            @string/go_to_subtask
        </item>

        <item quantity="other">
            @string/go_to_subtasks
        </item>
    </plurals>

    <string name="go_to_subtask">go to\nsubtask</string>
    <string name="go_to_subtasks">go to\nsubtasks</string>

    <string name="add_new_task">Add new task</string>
    <string name="your_tasks">Your tasks</string>
    <string name="task_detail">Task detail</string>

    <plurals name="subtask_s">
        <item quantity="zero">
            Without subtasks
        </item>
        <item quantity="one">
            One subtask
        </item>
        <item quantity="other">
            Subtasks: %d
        </item>
    </plurals>

    <string name="type_att">Type:</string>
    <string name="done_att">Done:</string>
    <string name="description_att">Description:</string>
    <string name="title_att">Title:</string>

    <string name="status_att">Status:</string>
    <string name="completed">completed</string>
    <string name="uncompleted">uncompleted</string>
    <string name="change_status">Change status</string>
    <string name="add_subtask">add subtask</string>

    <string name="enter_your_x_here">Enter your %s here</string>

    <string name="enter_your_title_here">Enter your title here</string>
    <string name="enter_your_description_here">Enter your description here</string>
    <string name="enter_your_type_here">Enter your type here</string>


    <string name="title">title</string>
    <string name="description">description</string>
    <string name="type">type</string>
    <string name="advise_date">advise date</string>
    <string name="add_task">Add task</string>
    <string name="save">save</string>
    <string name="super_task">Super task:</string>
    <string name="doesn_t_have">doesn\'t have</string>

    <string name="new_task_error">The new task must have name and type.</string>
    <string name="new_task_wrong_title">The new task has an invalid title.</string>
    <string name="new_task_wrong_super_task">The new task has an invalid super task.</string>
    <string name="new_task_wrong_type">The new task has an invalid type.</string>
    <string name="new_task_saved">The new task has been saved.</string>
    <string name="days_go_by">How fast days go by!!!</string>
    <string name="try_date_again">Try to put the date again</string>

    <string name="the_only_task_with_type">This is the only task of its type</string>

    <string name="bye">Bye!!!</string>
    <string name="discard">discard</string>
    <string name="save_change">save</string>
    <string name="new_value">New value:</string>
    <string name="old_value">Old value:</string>


    <string name="save_in_hierarchy">save in this hierarchy of tasks</string>
    <string name="log_out_in_process">Log out in process</string>
    <string name="all_children">All children</string>
    <string name="active">undone</string>
    <string name="completed_tasks">done</string>
    <string name="only_super_tasks">Only super tasks</string>
    <string name="immediate_children">Immediate children</string>
    <string name="filter_by_done">filter by done</string>
    <string name="all">All</string>
    <string name="delete_task">delete task</string>
    <string name="only_this">Only this</string>
    <string name="also_sub_tasks">Also sub tasks</string>
    <string name="house_icon">House icon</string>
    <string name="login">Login</string>
    <string name="error_signing_in">There was an error signing in</string>
    <string name="signing_in_cancelled">Signing in cancelled</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="enter_without_log_in">Enter without log in</string>
    <string name="tasks_app">Tasks app</string>
    <string name="exit">Exit</string>
    <string name="tasks">Tasks</string>
    <string name="date">Date:</string>
    <string name="quit">Quit</string>

    <string name="must_select_future_date">You must select a future date</string>
    <string name="advise_date_key">Advise date:</string>
    <string name="creation_date">Creation date:</string>


    <string name="value_saved">Value already saved</string>
    <string name="impossible_save_value">Impossible to save the value</string>
    <string name="loading">loading</string>
    <string name="loaded">loaded</string>
    <string name="impossible_load">impossible load</string>
    <string name="sync_in_process">sync in process</string>
    <string name="sync_done">sync done</string>
    <string name="sync_impossible">sync impossible</string>


    <!--No translatable-->
    <string name="CHANNEL_ID" translatable="false">0</string>

    <string name="title_activity_log_in" translatable="false">log in activity</string>
    <string name="channel_name" translatable="false">Advise date</string>
    <string name="channel_description" translatable="false">This channel emits notifications related to the advise date of a task.</string>
    <string name="home_fragment_label" translatable="false">Home</string>
    <string name="log_in_fragment_label" translatable="false">Log In</string>
    <string name="navigation_drawer_open" translatable="false">navigation drawer open</string>
    <string name="navigation_drawer_close" translatable="false">navigation drawer close</string>
    <string name="attribute_value_format" translatable="false">%1s: %2s</string>
    <string name="attribute_amount_format" translatable="false">%1s: %2d</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="fragment_tasks_label" translatable="false">Task Fragment</string>
    <string name="fragment_task_detail_label" translatable="false">Task detail Fragment</string>


    <string name="mucho_texto_1" translatable="false">My task consist in create this application, I can do it because I am the best.\nI do not know what to put extra here, but I need a long text.</string>
    <string name="mucho_texto" translatable="false">Object oriented programming (OOP):\nIs a programming paradigm based on the concept of objects, which can contain data and code: data in data in the form of fields (often known as attributes or properties), and code, in the form of procedures (often known as methods).</string>
    <string name="no_mucho_texto" translatable="false">Object oriented programming (OOP)</string>
    <string name="nada_texto" translatable="false">.</string>

</resources>
