<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.logIn.LogInActivity">

    <TextView
        android:id="@+id/home_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/tasks_app"

        android:layout_gravity="center|top"
        android:layout_marginTop="32dp"
        android:textSize="64sp"
        android:textColor="?attr/colorAccent"
        />

    <LinearLayout
        android:id="@+id/access_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="30dp"
        >
        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:text="@string/log_in"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <Button
            android:id="@+id/enter_no_log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:text="@string/enter_without_log_in"
            />
    </LinearLayout>
</FrameLayout>
