<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <import type="android.view.View" />
        <variable
            name="tasksAdapterViewModel"
            type="com.example.taskscheduler.ui.main.adapters.itemAdapters.TasksAdapterViewModel"
            />
        <variable
            name="viewmodel"
            type="com.example.taskscheduler.ui.main.taskDetail.TaskDetailViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.taskDetail.TaskDetailFragment">

        <TextView
            android:id="@+id/textview_second"

            android:text="@string/task_detail"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            style="@style/fragments_title"

            />

        <EditText
            android:id="@+id/task_title_cont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/attributes_marginVertical"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/task_description"
            app:layout_constraintTop_toBottomOf="@id/textview_second"
            app:layout_constraintHorizontal_bias="0.1"

            android:hint="@{@string/enter_your_x_here(@string/title)}"
            android:text="@={viewmodel.title}"

            tools:text="value 0"

            style="@style/task_value"
            />

        <EditText
            android:id="@+id/task_type_cont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@id/task_done_cont"
            app:layout_constraintTop_toBottomOf="@id/task_title_cont"

            app:layout_constraintStart_toStartOf="@+id/task_title_cont"

            android:hint="@{@string/enter_your_x_here(@string/type)}"
            android:text="@={viewmodel.type}"

            tools:text="value 1"

            style="@style/task_value"
            />

        <TextView
            android:id="@+id/task_done_cont"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@{viewmodel.task.isDone ? @string/completed : @string/uncompleted}"
            android:textColor="@{viewmodel.task.isDone ? @color/done : @color/undone}"

            app:layout_constraintBottom_toTopOf="@+id/superTask_cont"
            app:layout_constraintStart_toStartOf="@+id/task_title_cont"

            app:layout_constraintTop_toBottomOf="@id/task_type_cont"
            tools:text="completed"

            android:onClick = "@{() -> tasksAdapterViewModel.changeDoneStatusOfTopTask() }"

            tools:textColor="@color/done"

            style="@style/task_value"
            /> <!--TODO: @+id/superTask_cont ? -->

        <TextView
            android:id="@+id/superTask_cont"

            style="@style/task_value"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="@+id/task_title_cont"

            app:layout_constraintBottom_toTopOf="@+id/task_description_cont_SV"
            app:layout_constraintTop_toBottomOf="@+id/task_done_cont"

            android:text="@{viewmodel.task.hasSuperTask ? viewmodel.task.superTaskTitle : @string/doesn_t_have}"

            android:onClick="@{()-> tasksAdapterViewModel.goToSuperTask()}"

            tools:text="Learning"
            />

        <ScrollView
            android:id="@+id/task_description_cont_SV"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="@dimen/attributes_marginVertical"

            app:layout_constraintStart_toStartOf="@+id/task_title_cont"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintBottom_toTopOf="@id/subtasksRcy"

            app:layout_constraintHeight_max="@dimen/description_max_height"
            app:layout_constrainedHeight="true"
            >

            <EditText
                android:id="@+id/task_description_cont2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:hint="@{@string/enter_your_x_here(@string/description)}"
                android:text="@={viewmodel.description}"

                tools:text="@string/mucho_texto"
                tools:visibility="visible"

                style="@style/task_value"
                />

        </ScrollView>

        <!--visible gone-->
        <!--mucho_texto mucho_texto_1 no_mucho_texto nada_texto-->
        <!--        tools:text="textView3"-->
        <!--        tools:text="@string/mucho_texto"-->

        <!--
           The following TextView may be changed by images.
        -->
        <TextView
            android:id="@+id/task_title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/task_title_cont"

            android:layout_marginStart="32dp"

            android:text="@string/title_att"
            />

        <TextView
            android:id="@+id/task_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_att"

            app:layout_constraintStart_toStartOf="@+id/task_title"
            app:layout_constraintBaseline_toBaselineOf="@id/task_type_cont"

            />

        <TextView
            android:id="@+id/task_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_att"

            app:layout_constraintStart_toStartOf="@+id/task_title"
            app:layout_constraintBaseline_toBaselineOf="@id/task_done_cont"
            />

        <TextView
            android:id="@+id/superTask"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="@+id/task_title"

            app:layout_constraintBaseline_toBaselineOf="@id/superTask_cont"

            android:text="@string/super_task"
            />

        <TextView
            android:id="@+id/task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_att"

            app:layout_constraintBottom_toBottomOf="@+id/task_description_cont_SV"
            app:layout_constraintStart_toStartOf="@+id/task_title"
            app:layout_constraintTop_toTopOf="@+id/task_description_cont_SV"

            app:layout_constraintVertical_bias="0.0"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subtasksRcy"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_max="@dimen/subtasksRcyMaxHeight"
            app:layout_constrainedHeight="true"

            tools:layout_height="300dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_subtask_button"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            style="@style/recyclerTasks"
            />

        <Button
            android:id="@+id/add_subtask_button"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintBottom_toBottomOf="parent"

            android:text="@string/add_subtask"
            style="@style/lower_button"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/home_button"
            android:layout_width="56dp"
            android:layout_height="56dp"

            android:layout_margin="@dimen/home_button_margin"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:clickable="true"

            app:cardCornerRadius="@dimen/round_radio"

            android:onClick="@{() -> tasksAdapterViewModel.clearStack()}"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/home_icon_foreground"
                />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
